Version 2010081701 Tue Aug 17 02:14:02 CEST 2010
+ Added SREZIC (Slaven Rezic)

Version 2009110201
+ List requirements in Makefile.PL

Version 2009102802
+ Mention prereqs in Makefile.PL
+ POD tests

Version 2009102801
First release